# assignment-6-Dan-jpg2-main

./: CMakeLists.txt
include/: list.h  max.h
src/: list.c  main.cpp  max.c
tests/src/: tests.cpp
